--- a/sitemap.html
+++ b/sitemap.html
@@ -15,12 +15,12 @@
     <div class="sitemap">
         <div class="updatesblock">
             <ul style="margin-bottom: 40px;">
-                
                 <li><h3>Latest updates</h3></li>
+                <li><a target="_blank" href="product-page.html">Product page</a></li>
+                <li><a target="_blank" href="product-page-outofstock.html">Product page - out of stock</a></li>
+                
                 <li><a target="_blank" href="index.html">Home page</a></li>
                 <li><a target="_blank" href="category-page.html">Category page</a></li>
-
-                <li><a target="_blank" href="product-page.html">Product page</a></li>
                 <li><a target="_blank" href="cart-page.html">Cart page</a></li>
                 <li><a target="_blank" href="my-account-recent-orders.html">My Account - Recent Orders</a></li>
                 <li><a target="_blank" href="checkout.html">Checkout</a></li>
